// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 bfavrm"
  id="Group 1"
  rows={null}
>
  <p
    className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
    fontSize="0.875rem"
    fontWeight={600}
    id={null}
    letterSpacing="0.25px"
  >
    This is the first group
  </p>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
    id="Field 1"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 1
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
      fontSize="1rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
    id="Field 2"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 2
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
      fontSize="1rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
    id="Field 3"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 3
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
      fontSize="1rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 bfavrm"
  id={null}
  rows={null}
>
  <p
    className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
    fontSize="0.875rem"
    fontWeight={600}
    id={null}
    letterSpacing="0.25px"
  >
    Fields via Array
  </p>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
    id="Field 1"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 1
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
      fontSize="1rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
    id="Field 2"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 2
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
      fontSize="1rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
    id="Field 3"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
      cursor="pointer"
      fontSize="1rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing=".5px"
    >
      Field 3
    </label>
    <p
      className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
      fontSize="1rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.5px"
    >
      Value Goes Here
    </p>
  </section>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
  id={null}
  rows={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 bfavrm"
    id={null}
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
      fontSize="0.875rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.25px"
    >
      Inline Fields (Default)
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 1
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 2
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 3
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 bfavrm"
    id={null}
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
      fontSize="0.875rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.25px"
    >
      Vertically Aligned Fields
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 EtesY"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 1
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 EtesY"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 2
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 EtesY"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 3
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 bfavrm"
    id={null}
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
      fontSize="0.875rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.25px"
    >
      Edge Aligned Fields
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 kGHgnR"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 1
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 jYKsXf"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 kGHgnR"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 2
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 jYKsXf"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 kGHgnR"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 3
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 jYKsXf"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
  </section>
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV"
  id={null}
  rows={null}
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 ezgwnQ Field__FieldGrid-sc-11od8ug-5 bfavrm"
    id={null}
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
      fontSize="0.875rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.25px"
    >
      Field Group Gap XS
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 1
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 2
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 3
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kFWgJV Field__FieldGrid-sc-11od8ug-5 bfavrm"
    id={null}
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
      fontSize="0.875rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.25px"
    >
      Field Group Gap Default
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 1
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 2
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 3
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
  </section>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 liKUbB Field__FieldGrid-sc-11od8ug-5 bfavrm"
    id={null}
    rows={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 fEVysz Field__GroupTitle-sc-11od8ug-1 ffFQaW"
      fontSize="0.875rem"
      fontWeight={600}
      id={null}
      letterSpacing="0.25px"
    >
      Field Group Gap XL
    </p>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
      id="Field 1"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 1
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
      id="Field 2"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 2
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Field__FieldItem-sc-11od8ug-0 leWDhJ"
      id="Field 3"
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 elsRJT Field__FieldLabel-sc-11od8ug-2 iooFWS"
        cursor="pointer"
        fontSize="1rem"
        fontWeight={400}
        htmlFor={null}
        letterSpacing=".5px"
      >
        Field 3
      </label>
      <p
        className="Typography__Paragraph-sc-19auepv-3 iUBZwE Field__FieldValue-sc-11od8ug-3 kJpFNa"
        fontSize="1rem"
        fontWeight={600}
        id={null}
        letterSpacing="0.5px"
      >
        Value Goes Here
      </p>
    </section>
  </section>
</section>
`;
